Add name to services R=darin@chromium.org, darin BUG=
Review URL: https://codereview.chromium.org/304273004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@273912 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: 54c225346d883df4fbba23fbe4f3d8736d048e07

--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_declaration.tmpl
@@ -12,6 +12,8 @@ class {{interface.client}};
 
 class {{interface.name}} {
  public:
+  static const char* Name_;
+
   typedef {{interface.name}}Proxy Proxy_;
   typedef {{interface.name}}Stub Stub_;
 
