--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_declaration.tmpl
@@ -5,6 +5,9 @@ class {{class_name}} {
  public:
   static {{class_name}}* New(mojo::internal::Buffer* buf);
 
+  static bool Validate(const void* data,
+                       mojo::internal::BoundsChecker* bounds_checker);
+
   mojo::internal::StructHeader header_;
 {{struct_macros.fields(struct)}}
 
