--- a/mojo/public/tools/bindings/generators/cpp_templates/params_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/params_definition.tmpl
@@ -7,6 +7,11 @@ class {{class_name}} {
         {{class_name}}();
   }
 
+  static bool Validate(const void* data,
+                       mojo::internal::BoundsChecker* bounds_checker) {
+    {{ struct_macros.validate(struct, class_name)|indent(4) }}
+  }
+
   mojo::internal::StructHeader header_;
 {{struct_macros.fields(struct)}}
 
