--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_definition.tmpl
@@ -6,6 +6,12 @@
   return new (buf->Allocate(sizeof({{class_name}}))) {{class_name}}();
 }
 
+// static
+bool {{class_name}}::Validate(const void* data,
+                              mojo::internal::BoundsChecker* bounds_checker) {
+  {{ struct_macros.validate(struct, class_name)|indent(2) }}
+}
+
 {{class_name}}::{{class_name}}() {
   header_.num_bytes = sizeof(*this);
   header_.num_fields = {{struct.packed.packed_fields|length}};
