Mojo cpp bindings: remove redundant validation in Decode*().
Because we already do necessary checks during the validation stage.

BUG=None
TEST=None

Review URL: https://codereview.chromium.org/293983026

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@274089 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: fb5c99989749832174ee1bb8503110b568113582

--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
@@ -100,8 +100,7 @@ bool {{class_name}}_{{method.name}}_ForwardToCallback::Accept(
       reinterpret_cast<internal::{{class_name}}_{{method.name}}_ResponseParams_Data*>(
           message->mutable_payload());
 
-  if (!params->DecodePointersAndHandles(message))
-    return false;
+  params->DecodePointersAndHandles(message->mutable_handles());
   {{alloc_params(method.response_parameters)|indent(2)}}
   callback_.Run({{pass_params(method.response_parameters)}});
   return true;
@@ -205,8 +204,7 @@ bool {{class_name}}Stub::Accept(mojo::Message* message) {
           reinterpret_cast<internal::{{class_name}}_{{method.name}}_Params_Data*>(
               message->mutable_payload());
 
-      if (!params->DecodePointersAndHandles(message))
-        return false;
+      params->DecodePointersAndHandles(message->mutable_handles());
       {{alloc_params(method.parameters)|indent(6)}}
       sink_->{{method.name}}({{pass_params(method.parameters)}});
       return true;
@@ -231,8 +229,7 @@ bool {{class_name}}Stub::AcceptWithResponder(
           reinterpret_cast<internal::{{class_name}}_{{method.name}}_Params_Data*>(
               message->mutable_payload());
 
-      if (!params->DecodePointersAndHandles(message))
-        return false;
+      params->DecodePointersAndHandles(message->mutable_handles());
       {{interface_macros.declare_callback(method)}}::Runnable* runnable =
           new {{class_name}}_{{method.name}}_ProxyToResponder(
               message->request_id(), responder);
