--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_declaration.tmpl
@@ -12,7 +12,7 @@ class {{class_name}} {
 {{struct_macros.fields(struct)}}
 
   void EncodePointersAndHandles(std::vector<mojo::Handle>* handles);
-  bool DecodePointersAndHandles(mojo::Message* message);
+  void DecodePointersAndHandles(std::vector<mojo::Handle>* handles);
 
  private:
   {{class_name}}();
