Mojo cpp bindings: report the reason of validation failure.
Validation errors are written to stderr and also used in validation tests.
This CL also changes MessageHeaderValidator to use the same struct header
validation code as other structs.

BUG=None
TEST=validation_unittest.cc
R=darin@chromium.org

Review URL: https://codereview.chromium.org/307353009

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@274855 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: 664e97e4884e31263bf5b775e93076b3f62b7427

--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_macros.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_macros.tmpl
@@ -15,15 +15,20 @@
 {%-     set name = packed_field.field.name %}
 {%-     if packed_field.field.kind|is_object_kind %}
 {%-       set wrapper_type = packed_field.field.kind|cpp_wrapper_type %}
-  if (!mojo::internal::ValidateEncodedPointer(&object->{{name}}.offset) ||
-      !{{wrapper_type}}::Data_::Validate(
+  if (!mojo::internal::ValidateEncodedPointer(&object->{{name}}.offset)) {
+    ReportValidationError(mojo::internal::VALIDATION_ERROR_ILLEGAL_POINTER);
+    return false;
+  }
+  if (!{{wrapper_type}}::Data_::Validate(
           mojo::internal::DecodePointerRaw(&object->{{name}}.offset),
           bounds_checker)) {
     return false;
   }
 {%-     elif packed_field.field.kind|is_handle_kind %}
-  if (!bounds_checker->ClaimHandle(object->{{name}}))
+  if (!bounds_checker->ClaimHandle(object->{{name}})) {
+    ReportValidationError(mojo::internal::VALIDATION_ERROR_ILLEGAL_HANDLE);
     return false;
+  }
 {%-     endif %}
 {%-   endfor %}
 
