Mojom: Remove expression support from IDL compiler.
BUG=320082

Review URL: https://codereview.chromium.org/305963005

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@274944 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: 6a3ac06969da713bef20ae47ed0bb94cb53bdc77

--- a/mojo/public/tools/bindings/generators/cpp_templates/wrapper_class_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/wrapper_class_definition.tmpl
@@ -1,6 +1,6 @@
 {%- macro get_default(field) -%}
 {%-   if field.default -%}
-{{field.default|expression_to_text(module)}}
+{{field.default|expression_to_text}}
 {%-   endif -%}
 {%- endmacro -%}
 
