--- a/mojo/public/tools/bindings/generators/cpp_templates/enum_declaration.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/enum_declaration.tmpl
@@ -1,7 +1,7 @@
 enum {{enum.name}} {
 {%- for field in enum.fields %}
 {%-    if field.value %}
-  {{field.name}} = {{field.value|expression_to_text(module)}},
+  {{field.name}} = {{field.value|expression_to_text}},
 {%-    else %}
   {{field.name}},
 {%-    endif %}
