--- a/mojo/public/tools/bindings/generators/js_templates/enum_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/js_templates/enum_definition.tmpl
@@ -4,7 +4,7 @@
 {%- set prev_enum = 0 %}
 {%- for field in enum.fields %}
 {%-   if field.value %}
-  {{enum_name}}.{{field.name}} = {{field.value|expression_to_text(module)}};
+  {{enum_name}}.{{field.name}} = {{field.value|expression_to_text}};
 {%-   elif loop.first %}
   {{enum_name}}.{{field.name}} = 0;
 {%-   else %}
