Mojo: Expose service names in the JS bindings.
Review URL: https://codereview.chromium.org/326303003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@276588 0039d316-1c4b-4281-b951-d872f2087c98


CrOS-Libchrome-Original-Commit: 19d63df74e05b25a95c0f970ed54f762bcd75754

--- a/mojo/public/tools/bindings/generators/js_templates/interface_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/js_templates/interface_definition.tmpl
@@ -1,3 +1,4 @@
+{%- set namespace_as_string = namespace|replace(".","::") %}
 {%- for method in interface.methods %}
   var k{{interface.name}}_{{method.name}}_Name = {{method.ordinal}};
 {%- endfor %}
@@ -5,6 +6,8 @@
   function {{interface.name}}Proxy(receiver) {
     this.receiver_ = receiver;
   }
+
+  {{interface.name}}Proxy.NAME_ = '{{namespace_as_string}}::{{interface.name}}';
 
 {%- for method in interface.methods %}
   {{interface.name}}Proxy.prototype.{{method.name|stylize_method}} = function(
@@ -50,6 +53,8 @@
 
   function {{interface.name}}Stub() {
   }
+
+  {{interface.name}}Stub.NAME_ = '{{namespace_as_string}}::{{interface.name}}';
 
   {{interface.name}}Stub.prototype.accept = function(message) {
     var reader = new codec.MessageReader(message);
