--- a/mojo/public/tools/bindings/generators/java_templates/constant_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/java_templates/constant_definition.tmpl
@@ -1,5 +1,3 @@
-{% from "java_macros.tmpl" import build_default %}
-
 {% macro constant_def(constant) %}
-public static final {{constant.kind|java_type}} {{constant|name}} = {{build_default(module, constant.kind, constant.value)|indent(4)}};
+public static final {{constant.kind|java_type}} {{constant|name}} = ({{constant.kind|java_type}}) {{constant.value|expression_to_text}};
 {% endmacro %}
