mojom: Add associative arrays to the mojom language.
This adds associative arrays to mojom to the main parser, and the C++ bindings generator. This adds a mojo::Map<> class to the C++ bindings, used by the generated bindings. Finally, it moves the clipboard.mojom interface over to associative arrays (which was the inspiration to add them to the mojom language).

BUG=413863

Review URL: https://codereview.chromium.org/611633002

Cr-Commit-Position: refs/heads/master@{#299017}


CrOS-Libchrome-Original-Commit: 0f8647ec517acc9e80b0529fdb91fbd759ce85c3

--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
@@ -55,6 +55,9 @@ params->{{param.name}}
 {%-       if param.kind|is_any_array_kind %}
   mojo::SerializeArray_<{{param.kind|get_array_validate_params|indent(24)}}>(
       mojo::internal::Forward(in_{{param.name}}), builder.buffer(), &params->{{param.name}}.ptr);
+{%-       elif param.kind|is_map_kind %}
+  mojo::SerializeMap_<{{param.kind.value_kind|get_map_validate_params|indent(24)}}>(
+      mojo::internal::Forward(in_{{param.name}}), builder.buffer(), &params->{{param.name}}.ptr);
 {%-       else %}
   Serialize_(mojo::internal::Forward(in_{{param.name}}), builder.buffer(), &params->{{param.name}}.ptr);
 {%-       endif %}
