--- a/mojo/public/tools/bindings/generators/js_templates/module.js.tmpl
+++ b/mojo/public/tools/bindings/generators/js_templates/module.js.tmpl
@@ -50,6 +50,8 @@ define("{{module.path}}", [
 {#--- Interface Client #}
 {%-   if interface.client in interfaces|map(attribute='name') %}
   exports.{{interface.name}}.client = {{interface.client}};
+{%-   elif interface.client in imported_interfaces %}
+  exports.{{interface.name}}.client = {{imported_interfaces[interface.client]}};
 {%-   endif %}
 {%- endfor %}
 
