[Mojo] Add support for HTML imports as well as AMD modules
This CL teaches the mojom generator how to package JavaScript generated from
mojom both as AMD modules as an HTML imports.

R=hansmuller@chromium.org

Review URL: https://codereview.chromium.org/643323002

Cr-Commit-Position: refs/heads/master@{#299310}


CrOS-Libchrome-Original-Commit: d1045a6133a372e40638457a5ab5189e139f07d5

--- a/mojo/public/tools/bindings/generators/js_templates/module_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/js_templates/module_definition.tmpl
@@ -1,21 +1,5 @@
-// Copyright 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
-
-define("{{module.path}}", [
-    "mojo/public/js/bindings/codec",
-    "mojo/public/js/bindings/validator",
-{%- for import in imports %}
-    "{{import.module.path}}",
-{%- endfor %}
-  ], function(codec, validator
-{%- for import in imports -%}
-    , {{import.unique_name}}
-{%- endfor -%}
-) {
-
 {#--- Constants #}
-{%  for constant in module.constants %}
+{%-  for constant in module.constants %}
   var {{constant.name}} = {{constant.value|expression_to_text}};
 {%- endfor %}
 
@@ -54,6 +38,3 @@ define("{{module.path}}", [
   exports.{{interface.name}}.client = {{imported_interfaces[interface.client]}};
 {%-   endif %}
 {%- endfor %}
-
-  return exports;
-});
