Modify MOJO_ALLOW_UNUSED and MOJO_DCHECK syntax to allow enabling unused local warnings on MSVC.
The MOJO_DCHECK definition matches the DCHECK formulation in base/, and the
MOJO_ALLOW_UNUSED definition will be shared by base/'s ALLOW_UNUSED shortly.

BUG=81439
TEST=none

Review URL: https://codereview.chromium.org/650373002

Cr-Commit-Position: refs/heads/master@{#299497}


CrOS-Libchrome-Original-Commit: c90d706f6338a258a688d95107a223b83d4162f4

--- a/mojo/public/tools/bindings/generators/cpp_templates/struct_macros.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/struct_macros.tmpl
@@ -8,8 +8,8 @@
     return false;
   }
 
-  const {{class_name}}* MOJO_ALLOW_UNUSED object =
-      static_cast<const {{class_name}}*>(data);
+  const {{class_name}}* object = static_cast<const {{class_name}}*>(data);
+  MOJO_ALLOW_UNUSED_LOCAL(object);
 
 {%-   for packed_field in struct.packed.packed_fields %}
 {%-     set name = packed_field.field.name %}
