--- a/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/interface_definition.tmpl
@@ -157,9 +157,10 @@ void {{proxy_name}}::{{method.name}}(
   if (!receiver_->AcceptWithResponder(&message, responder))
     delete responder;
 {%- else %}
-  bool ok MOJO_ALLOW_UNUSED = receiver_->Accept(&message);
+  bool ok = receiver_->Accept(&message);
   // This return value may be ignored as !ok implies the Connector has
   // encountered an error, which will be visible through other means.
+  MOJO_ALLOW_UNUSED_LOCAL(ok);
 {%- endif %}
 }
 {%- endfor %}
@@ -200,7 +201,8 @@ void {{class_name}}_{{method.name}}_ProxyToResponder::Run(
   mojo::internal::ResponseMessageBuilder builder(
       {{message_name}}, payload_size, request_id_);
   {{build_message(params_name, method.response_parameters, params_description)}}
-  bool ok MOJO_ALLOW_UNUSED = responder_->Accept(&message);
+  bool ok = responder_->Accept(&message);
+  MOJO_ALLOW_UNUSED_LOCAL(ok);
   // TODO(darin): !ok returned here indicates a malformed message, and that may
   // be good reason to close the connection. However, we don't have a way to do
   // that from here. We should add a way.
