--- a/mojo/public/tools/bindings/generators/js_templates/module.html.tmpl
+++ b/mojo/public/tools/bindings/generators/js_templates/module.html.tmpl
@@ -2,10 +2,10 @@
      Use of this source code is governed by a BSD-style license that can be
      found in the LICENSE file. -->
 
-<link rel="import" href="//mojo/public/js/bindings/codec.html" as="codec" />
-<link rel="import" href="//mojo/public/js/bindings/validator.html" as="validator" />
+<link rel="import" href="/mojo/public/html/codec.html" as="codec" />
+<link rel="import" href="/mojo/public/html/validator.html" as="validator" />
 {%- for import in imports %}
-<link rel="import" href="//{{import.module.path}}.html" as="{{import.unique_name}}" />
+<link rel="import" href="/{{import.module.path}}.html" as="{{import.unique_name}}" />
 {%- endfor %}
 <script>
 {%- include "module_definition.tmpl" %}
