Add Equals() to mojom structs and related types.
BUG=

Review URL: https://codereview.chromium.org/649633003

Cr-Commit-Position: refs/heads/master@{#299614}


CrOS-Libchrome-Original-Commit: 6b5d1a9be85123b55109f92268a6bf31157f2b88

--- a/mojo/public/tools/bindings/generators/cpp_templates/wrapper_class_definition.tmpl
+++ b/mojo/public/tools/bindings/generators/cpp_templates/wrapper_class_definition.tmpl
@@ -13,6 +13,7 @@
 
 {{struct.name}}::~{{struct.name}}() {
 }
+
 {%  if struct|is_cloneable_kind %}
 {{struct.name}}Ptr {{struct.name}}::Clone() const {
   {{struct.name}}Ptr rv(New());
@@ -26,3 +27,11 @@
   return rv.Pass();
 }
 {%  endif %}
+
+bool {{struct.name}}::Equals(const {{struct.name}}& other) const {
+{%-  for field in struct.fields %}
+  if (!mojo::internal::ValueTraits<{{field.kind|cpp_wrapper_type}}>::Equals({{field.name}}, other.{{field.name}}))
+    return false;
+{%-  endfor %}
+  return true;
+}
