Roll mojo/nacl to 94df8969.
Recent changes in the Mojo repo have added an IRT interface for Mojo support; this change rolls that (and other changes) into chrome to enable IRT support there as well.

BUG=454466

Review URL: https://codereview.chromium.org/874383003

Cr-Commit-Position: refs/heads/master@{#315786}


CrOS-Libchrome-Original-Commit: 18538e47326f801e87d4cfd8d0084949c93508f3

--- a/mojo/nacl/generator/mojo_syscall.cc.tmpl
+++ b/mojo/nacl/generator/mojo_syscall.cc.tmpl
@@ -9,12 +9,19 @@
 #include <stdio.h>
 
 #include "mojo/nacl/mojo_syscall_internal.h"
+#include "mojo/public/c/system/core.h"
 #include "native_client/src/public/chrome_main.h"
 #include "native_client/src/public/nacl_app.h"
 #include "native_client/src/trusted/desc/nacl_desc_custom.h"
-#include "third_party/mojo/src/mojo/public/c/system/core.h"
+
+MojoHandle g_mojo_handle = MOJO_HANDLE_INVALID;
 
 namespace {
+
+MojoResult _MojoGetInitialHandle(MojoHandle* handle) {
+  *handle = g_mojo_handle;
+  return MOJO_RESULT_OK;
+}
 
 void MojoDescDestroy(void* handle) {
 }
@@ -91,6 +98,12 @@ struct NaClDesc* MakeDisabledMojoDesc(struct NaClApp* nap) {
 
 void InjectMojo(struct NaClApp* nap) {
   NaClAppSetDesc(nap, NACL_MOJO_DESC, MakeMojoDesc(nap));
+  g_mojo_handle = MOJO_HANDLE_INVALID;
+}
+
+void InjectMojo(struct NaClApp* nap, MojoHandle handle) {
+  NaClAppSetDesc(nap, NACL_MOJO_DESC, MakeMojoDesc(nap));
+  g_mojo_handle = handle;
 }
 
 void InjectDisabledMojo(struct NaClApp* nap) {
