--- a/mojo/nacl/generator/libmojo.cc.tmpl
+++ b/mojo/nacl/generator/libmojo.cc.tmpl
@@ -4,25 +4,32 @@
 
 {{generator_warning}}
 
+#include "mojo/nacl/mojo_irt.h"
+#include "mojo/public/c/system/core.h"
 #include "native_client/src/public/chrome_main.h"
 #include "native_client/src/public/imc_syscalls.h"
 #include "native_client/src/public/imc_types.h"
-#include "third_party/mojo/src/mojo/public/c/system/core.h"
+#include "native_client/src/untrusted/irt/irt.h"
 
 // The value for this FD must not conflict with uses inside Chromium. However,
 // mojo/nacl doesn't depend on any Chromium headers, so we can't use a #define
 // from there.
 #define NACL_MOJO_DESC (NACL_CHROME_DESC_BASE + 3)
 
-static void DoMojoCall(uint32_t params[], nacl_abi_size_t num_params) {
-  NaClAbiNaClImcMsgIoVec iov[1] = {
-    {params, num_params}
-  };
-  NaClAbiNaClImcMsgHdr msgh = {iov, 1, NULL, 0};
-  // Note: return value unchecked.  We're relying on the result parameter being
-  // unmodified - if the syscall fails, the Mojo function will return whatever
-  // the result parameter was initialized to before this function was called.
-  imc_sendmsg(NACL_MOJO_DESC, &msgh, 0);
+bool g_irt_mojo_valid = false;
+struct nacl_irt_mojo g_irt_mojo;
+
+struct nacl_irt_mojo* get_irt_mojo() {
+  if (!g_irt_mojo_valid) {
+    size_t rc = nacl_interface_query(NACL_IRT_MOJO_v0_1,
+                                     &g_irt_mojo,
+                                     sizeof(g_irt_mojo));
+    if (rc != sizeof(g_irt_mojo))
+      return NULL;
+    else
+      g_irt_mojo_valid = true;
+  }
+  return &g_irt_mojo;
 }
 
 {{body}}
