Pepper: Use the Mojo IRT interface in Chrome.
This change reenables the Mojo test in Chrome and uses the Mojo IRT interface
inside Mojo calls.

It touches a file in the Mojo repo, which corresponds to the following
change there:
  https://codereview.chromium.org/918243002/
That change is necessary for the mojo irt interface to be queried from C++
code.

BUG=454466

Review URL: https://codereview.chromium.org/923593002

Cr-Commit-Position: refs/heads/master@{#316694}


CrOS-Libchrome-Original-Commit: 764f3bdfd53bbd53ed802ce43743ffd825cb25b6

--- a/mojo/nacl/generator/mojo_irt.h.tmpl
+++ b/mojo/nacl/generator/mojo_irt.h.tmpl
@@ -17,8 +17,16 @@
 
 {{body}}
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 size_t mojo_irt_query(const char* interface_ident,
                       void* table,
                       size_t tablesize);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif  // MOJO_NACL_MOJO_IRT_H_
